# MultiHU-TD-Python

./: .gitignore  README.md  pyproject.toml
src/: admm.py  ao_admm.py  cpdecomposition.py  main.py  proximal_operators.py
tests/: conftest.py  test_ao_admm.py  test_aoadmm.py  test_inheritance.py  test_tensor_operations.py
