[tool.poetry]
name = "tensor-mm-hsi-unmixing"
version = "0.1.0"
description = ""
authors = ["Mohamad JOUNI <mhmd.jouni@outlook.fr>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.1"
scipy = "^1.8.1"
pytest = "^7.1.2"
jupyter = "^1.0.0"
notebook = "^6.4.12"
tensorly = "^0.7.0"
sklearn = "^0.0"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
